# KriegBoar

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  clean.sh  vcpkg.json
src/code/: CMakeLists.txt  code.hpp
src/compiler/: CMakeLists.txt  compiler.hpp  ir.hpp  main.cpp  parser.cpp  parser.hpp  tree.hpp
src/kbc/: CMakeLists.txt  main.cpp
src/kbvm/: CMakeLists.txt  main.cpp  virtual_machine.cpp  virtual_machine.h
src/main/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  assert.cpp
src/utils/: CMakeLists.txt  assert.cpp  assert.hpp  source_location.hpp
src/utils/tests/: __placeholder__.cpp  assert.cpp
src/vm/: CMakeLists.txt  main.cpp  vm.hpp
